5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1637_2711.log
== TEST (2019-04-10 23:28:06) 
-- CODE:
valor = float (input("Digite o valor disponivel:"))
qtd_tickets = int (input("Digite a quantidade de tickets que deseja compar:"))
valor_tickets = float (input("Digite o valor dos tickets:"))
qtd_passes = int (input("Digite a quantidade de passes para comprar:"))
valor_passe = float (input("Digite o valor dos passes:"))
if ((qtd_tickets*valor_tickets+qtd_passes*valor_passe)<=valor):
	print (suficiente)
else:
	print (insuficiente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (suficiente)
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:28:28) 
-- CODE:
valor = float (input("Digite o valor disponivel:"))
qtd_tickets = int (input("Digite a quantidade de tickets que deseja compr7ar:"))
valor_tickets = float (input("Digite o valor dos tickets:"))
qtd_passes = int (input("Digite a quantidade de passes para comprar:"))
valor_passe = float (input("Digite o valor dos passes:"))
if ((qtd_tickets*valor_tickets+qtd_passes*valor_passe)<=valor):
	print (suficiente)
else:
	print (insuficiente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (suficiente)
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:28:39) 
-- CODE:
valor = float (input("Digite o valor disponivel:"))
qtd_tickets = int (input("Digite a quantidade de tickets que deseja comprar:"))
valor_tickets = float (input("Digite o valor dos tickets:"))
qtd_passes = int (input("Digite a quantidade de passes para comprar:"))
valor_passe = float (input("Digite o valor dos passes:"))
if ((qtd_tickets*valor_tickets+qtd_passes*valor_passe)<=valor):
	print (suficiente)
else:
	print (insuficiente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (suficiente)
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:29:20) 
-- CODE:
valor = float (input("Digite o valor disponivel:"))
qtd_tickets = int (input("Digite a quantidade de tickets que deseja comprar:"))
valor_tickets = float (input("Digite o valor dos tickets:"))
qtd_passes = int (input("Digite a quantidade de passes para comprar:"))
valor_passe = float (input("Digite o valor dos passes:"))
if ((qtd_tickets*valor_tickets+qtd_passes*valor_passe)<=valor):
	print ("suficiente")
else:
	print ("insuficiente")

-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:29:39) 
-- CODE:
valor = float (input("Digite o valor disponivel:"))
qtd_tickets = int (input("Digite a quantidade de tickets que deseja comprar:"))
valor_tickets = float (input("Digite o valor dos tickets:"))
qtd_passes = int (input("Digite a quantidade de passes para comprar:"))
valor_passe = float (input("Digite o valor dos passes:"))
if ((qtd_tickets*valor_tickets+qtd_passes*valor_passe)<=valor):
	print ("suficiente")
else:
	print ("insuficiente")

-- EXECUTION TIME:
0.211629
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:29:57) 
-- CODE:
valor = float (input("Digite o valor disponivel:"))
qtd_tickets = int (input("Digite a quantidade de tickets que deseja comprar:"))
valor_tickets = float (input("Digite o valor dos tickets:"))
qtd_passes = int (input("Digite a quantidade de passes para comprar:"))
valor_passe = float (input("Digite o valor dos passes:"))
if ((qtd_tickets*valor_tickets+qtd_passes*valor_passe)<=valor):
	print ("suficiente")
else:
	print ("insuficiente".upper())

-- EXECUTION TIME:
0.148022
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:30:15) 
-- CODE:
valor = float (input("Digite o valor disponivel:"))
qtd_tickets = int (input("Digite a quantidade de tickets que deseja comprar:"))
valor_tickets = float (input("Digite o valor dos tickets:"))
qtd_passes = int (input("Digite a quantidade de passes para comprar:"))
valor_passe = float (input("Digite o valor dos passes:"))
if ((qtd_tickets*valor_tickets+qtd_passes*valor_passe)<=valor):
	print ("suficiente".upper())
else:
	print ("insuficiente".upper())

-- EXECUTION TIME:
0.147501
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
